--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -40,5 +40,5 @@
 .text-center{
   text-align: center;
   margin: auto;
-  margin-top: 100px;
+  // margin-top: 100px; this messes up the dashboard
 }
