--- a/app/views/dashboard/_post.html.erb
+++ b/app/views/dashboard/_post.html.erb
@@ -1,26 +1,47 @@
 <div class="dashboard-card right-card">
-          <div class="subject"> <%= post.subject %></div>
-          <%= post.content %> <br>
-            <% requests = @received_requests.where(post: post) %>
-            <br>
-            <div class="subject"> reactions to: <%= post.subject %> </div>
-            <% requests.reverse.take(3).each do |request| %>
-            <div class="request-card">
-            <%= request.message %>
-             <div class="sender-request">- <%= link_to request.messenger.title, user_path(request.messenger) %></div> <br>
+  <div class="subject"> <h3><%= link_to post.subject, post_path(post) %></h3></div>
+  <div class="created-at"><i> (<%= time_ago_in_words(post.created_at) %> ago)</i></div>
+  <% requests = @received_requests.where(post: post) %>
+  <br>
 
-            <!-- Add accept or decline button -->
-            <% if request.status == "pending" %>
-              <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
-              <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
-            <% elsif request.status == "accepted" %>
-              <div class="label label-success">You are now a match with <%= request.messenger.title %></div>
-            <% elsif request.status == "declined" %>
-              <div class="label label-danger">You declined this request</div>
-            <% else %>
-              <div class="wrong">Something went wrong</div>
-            <% end %>
-            </div>
-            <% end %> <br><br>
-            <div class="created-at">created at <%= post.created_at.strftime("%c") %></div><br>
-          </div>
+  <button class="btn btn-blue" type="button" data-toggle="collapse" data-target="#collapserequests<%= post.id %> " aria-expanded="false" aria-controls="collapse">
+  See requests
+  </button>
+
+  <div class="collapse" id="collapserequests<%= post.id %>">
+
+    <% if requests != [] %>
+    <% requests.reverse.take(3).each do |request| %>
+    <div class="request-card">
+      <%= request.message %>
+      <div class="sender-request">- <%= link_to request.messenger.title, user_path(request.messenger) %>
+        <i> (<%= time_ago_in_words(request.created_at) %> ago)</i>
+      </div> <br>
+
+      <!-- Add accept or decline button -->
+      <% if request.status == "pending" %>
+      <%= link_to "accept", accept_dashboard_received_request_path(request), method: :patch , class: "btn btn-success" %>
+      <%= link_to "decline", refuse_dashboard_received_request_path(request), method: :patch, class: "btn btn-danger" %>
+
+      <% elsif request.status == "accepted" %>
+      <div class="label label-success"> Connected! <%= link_to "Chat with " + request.messenger.title,
+        post_request_chat_messages_path(request.post, request) %></div>
+
+        <% elsif request.status == "declined" %>
+        <div class="label label-danger">You declined this request</div>
+
+        <% else %>
+        <div class="wrong">Something went wrong</div>
+        <% end %>
+      </div>
+      <% end %> <br><br>
+
+      <% else %>
+      <p>There are no reactions yet</p>
+      <% end  %>
+
+    </div>
+
+
+  </div>
+
