some small changes including svg

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,31 @@
-    <div class="top-div">
+    <div class="home-top">
     </div>
-    <%= image_tag "skew.png", width: "100%"  %>
-
-    <div class="center-div">
-      <%=image_tag "refuGapp.png", width: '35%'  %>
-      <p>Fill the gap between Locals and refugees by sharing skills.</p>
-      <%= link_to "CONNECT", new_user_registration_path, class:"btn btn-warning btn-lg"%>
+    <div class="home-middle">
+      <div class="home-logo"><%=image_tag "refuGapp.png", width: '300px'  %></div> <br>
+      <div class="home-tagline">Fill the gap between locals and refugees.</div>
+      <div class="home-logo"><%= link_to "CONNECT", new_user_registration_path, class:"hvr-sweep-to-right btn-orange"%></div>
     </div>
-
-
-    <h1>ABOUT</h1>
+    <div class="home-about">
+    <div class="home-underline"><span class="home-title">About</span></div>
     <p> We all are blessed with a lot of skills. Why not connect with the people around us by exchanging them? With RefuGapp we are filling the gap between locals and newcomers by providing a platform where you can offer your offer and find skill and connect with new people! </p>
     <p>Are you a Local? Get to now the newcomers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect! Or: a skill you want to share? Make a post and someone will find you!</p>
     <p>Are you a newcomer? Get to know the locals by offering your skills! Make a post and help a local with the things you are good at.
       Or: in need of some help? Look what the locals are offering and send a request!</p>
+
+    </div>
+
+
+    <div class="diagonal-blue">
+
+    <%#= image_tag "skew.svg", width: "100%"  %></div>
+
+
+
+    <div class="center-div">
+
+
+
+    </div>
+
+
+
