add style to dashboard etc.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,14 +17,13 @@
 @import "vendor/index";
 
 // Dashboard
-@import "dashboard.scss";
+// @import "dashboard.scss";
 
 
 // Linkjes zwart nu even hier, maar vergeet het niet zo weg te halen :)
 a {
   color: $dark-gray;
 }
-
 
 a:hover {
   color: $orange;
