--- a/app/views/dashboard/home/index.html.erb
+++ b/app/views/dashboard/home/index.html.erb
@@ -1,10 +1,6 @@
-<div class="dashboard-wrapper">
-
-
-
-  <%= render "dashboard/welcome" %>
-
-
+<div class="wrapper-dashboard">
+<div class="hallo"></div>
+  <%#= render "dashboard/welcome" %>
   <div class="dashboard-container">
     <!-- SHOW ALL RECEIVED REQUESTS -->
     <div class="dashboard-left">
