--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,66 +1,63 @@
+<div class="wrapper-posts">
+  <div class="posts-underline">
+    <span class="posts-title">Posts</span>
+    <!-- FILTER THE RESULTS -->
+    <div class="posts-type-selection">
+      <%= link_to "Refugee", posts_path(kind: 'refugee', category: @category), class: filter_kind_css_class('refugee') %>
 
-<div class="banner posts" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
-  <div class="wrapper">
-    <div class="banner-content">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <h1>POSTS</h1>
-      <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
+      <%= link_to "Dutchie", posts_path(kind: 'dutchie', category: @category), class: filter_kind_css_class('dutchie') %>
 
-      <!-- FILTER THE RESULTS -->
-      <div>
-        <%= link_to "Refugee", posts_path(kind: 'refugee', category: @category), class: filter_kind_css_class('refugee') %>
+      <%= link_to "All", posts_path(kind: 'all', category: @category), class: filter_kind_css_class('all') %>
+    </div>
 
-        <%= link_to "Dutchie", posts_path(kind: 'dutchie', category: @category), class: filter_kind_css_class('dutchie') %>
+    <div class="posts-type-selection">
+      <%= link_to "Skills", posts_path(category: 'skills', kind: @kind), class: filter_category_css_class('skills') %>
 
-        <%= link_to "All", posts_path(kind: 'all', category: @category), class: filter_kind_css_class('all') %>
-      </div>
+      <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
 
-      <div>
-        <%= link_to "Skills", posts_path(category: 'skills', kind: @kind), class: filter_category_css_class('skills') %>
+      <%= link_to "Languages", posts_path(category: 'languages', kind: @kind), class: filter_category_css_class('languages') %>
 
-        <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
-
-        <%= link_to "Languages", posts_path(category: 'languages', kind: @kind), class: filter_category_css_class('languages') %>
-
-        <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
-      </div>
-
-      <div class="card-wrapper">
-        <div class="container">
-          <div class="row">
-            <% @posties.each do |post| %>
-            <div class="col-xs-12 col-sm-6">
-              <div class= "card">
-                <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
-                <p><%= link_to post.author.title, user_path(post.author) %>
-                  <i> <%= time_ago_in_words(post.created_at) %> ago</i>
-                </p>
-
-                <div class="card-description">
-                <p><%= truncate(post.content, :length => 150) %></p>
-                  <% if post.content.length > 150 %>
-                  <p class="read_more_button"> <%= link_to "Read more", post_path(post) %></p>
-                  <% end  %>
-                  <% if post.button_valid?(current_user) %>
-                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "make btn btn-success" %></p>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-
+      <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <% @posts.reverse.each do |post| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="posts-card">
+          <div class="posts-underline-blue">
+           <span class="posts-title"> <%= post.subject %></span></div> <br>
+           <div class="posts-content">
+            <%= truncate(post.content, :length => 120) %>
+            <% if post.content.length > 150 %>
+            <%= link_to "read more", post_path(post)   %>
             <% end %>
+          </div>
+          <div class="post-ago">
+            <p><%= time_ago_in_words(post.created_at) %> ago</p>
+          </div>
+          <div class="post-make">
+            <% if post.button_valid?(current_user) %>
+            <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-sweep-to-right btn-black" %></p>
+            <% end %>
+          </div>
+          <div class="posts-images">
+            <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+            <%= link_to post.author.title, user_path(post.author) %>
           </div>
         </div>
       </div>
-      <p><%= link_to 'Make a post!', new_post_path, class:"btn btn-danger btn-lg" %></p>
+      <% end %>
     </div>
   </div>
+  <% if current_user %>
+  <div class="posts-center">
+    <%= link_to 'Make a post!', new_post_path, class:"hvr-sweep-to-right btn-black" %>
+  </div>
+  <% end %>
+</div>
+
+
 </div>
 
 <div id="map" class="dynamic_map text-center" style="width: 75%; height: 400px;"></div>
