--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,10 @@
 <div class="wrapper-posts">
-  <div class="posts-underline">
-    <span class="posts-title">Posts</span>
-    <!-- FILTER THE RESULTS -->
-    <div class="posts-type-selection">
+  <div class="form-title"><h1>Posts</h1></div>
+  <!-- FILTER THE RESULTS -->
+  <span>
+
+  <div class="posts-selection">
+    <div class="posts-type-selection person-type">
       <%= link_to "Refugee", posts_path(kind: 'refugee', category: @category), class: filter_kind_css_class('refugee') %>
 
       <%= link_to "Dutchie", posts_path(kind: 'dutchie', category: @category), class: filter_kind_css_class('dutchie') %>
@@ -10,7 +12,7 @@
       <%= link_to "All", posts_path(kind: 'all', category: @category), class: filter_kind_css_class('all') %>
     </div>
 
-    <div class="posts-type-selection">
+    <div class="posts-type-selection category-type">
       <%= link_to "Skills", posts_path(category: 'skills', kind: @kind), class: filter_category_css_class('skills') %>
 
       <%= link_to "Social", posts_path(category: 'social', kind: @kind), class: filter_category_css_class('social') %>
@@ -20,12 +22,13 @@
       <%= link_to "All", posts_path(category: 'all', kind: @kind), class: filter_category_css_class('all') %>
     </div>
   </div>
+  </span>
   <div class="container">
     <div class="row">
       <% @posts.reverse.each do |post| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="posts-card">
-          <div class="posts-underline-blue">
+          <div class="posts-underline-orange">
            <span class="posts-title"> <%= post.subject %></span></div> <br>
            <div class="posts-content">
             <%= truncate(post.content, :length => 120) %>
@@ -36,23 +39,23 @@
           <div class="post-ago">
             <p><%= time_ago_in_words(post.created_at) %> ago</p>
           </div>
+          <div class="posts-images">
+            <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+            <%= link_to post.author.title, user_path(post.author) %>
+          </div>
           <div class="post-make">
             <% if post.button_valid?(current_user) %>
             <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-sweep-to-right btn-black" %></p>
             <% end %>
           </div>
-          <div class="posts-images">
-            <%= cl_image_tag post.author.full_picture, class: "avatar" %>
-            <%= link_to post.author.title, user_path(post.author) %>
-          </div>
         </div>
       </div>
       <% end %>
     </div>
-  </div>
   <% if current_user %>
   <div class="posts-center">
     <%= link_to 'Make a post!', new_post_path, class:"hvr-sweep-to-right btn-black" %>
+  </div>
   </div>
   <% end %>
 </div>
