--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 @import "vendor/index";
 
 // Dashboard
-@import "dashboard.scss";
+@import "dashboard";
 
 
 // Linkjes zwart nu even hier, maar vergeet het niet zo weg te halen :)
