--- a/app/views/dashboard/posts/index.html.erb
+++ b/app/views/dashboard/posts/index.html.erb
@@ -1,5 +1,4 @@
-<div class="wrapper">
-<%= render "dashboard/welcome" %>
+<div class="wrapper-dashboard">
 <div class="dashboard-right">
 <div class="your_posts">
         <% @posts.reverse.each do |post| %>
