--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -39,6 +39,6 @@
 
 .text-center{
   text-align: center;
-  margin: auto;
+  // margin: auto; this too
   // margin-top: 100px; this messes up the dashboard
 }
