Made colors variables

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -21,3 +21,7 @@ $brand-warning:   $orange;
 $border-radius-base:  2px;
 $border-radius-large: 2px;
 $border-radius-small: 2px;
+
+// extra collors
+$accepting-green: rgba(0, 222, 60, 1);
+$declining-red: #ff0000;
