--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,14 +21,18 @@
 .diagonal-blue {
   position: absolute;
   top: 129px;
-  width: 105%;
 }
 
 .home-logo {
-  padding-top: 20px;
+  padding-top: 50px;
   img {
-    width: 420px;
+    max-width: 480px;
   }
+}
+
+.home-button {
+  margin: 110px 0 150px 0;
+  font-size: 30px;
 }
 
 .home-tagline {
@@ -37,28 +41,26 @@
 }
 
 .home-about-top {
-  background-image: image-url("skew_grey.svg");
+  background-image: image-url("skew-1.svg");
   background-repeat: no-repeat;
   background-position: left-top;
-  background-size: 100% auto;
+  background-size: 100% 100%;
   height: 217px;
-  width: 101%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
 }
 
 .home-about {
-  background-color: $dark-gray;
   text-align: center;
   font-family: $base-font;
   padding: 0 200px;
-  color: white;
+  color: $dark-gray;
   padding-bottom: 100px;
 }
 
 .home-title {
-  color: white;
+  color: $dark-gray;
   text-decoration: none;
 
 }
@@ -74,6 +76,10 @@
 
 .center-div {
   background-color: white;
+}
 
+.bottom {
+  background-color: $dark-gray;
+  height: 200px;
 }
 
