--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,17 +3,15 @@
     <div class="home-middle">
       <div class="home-logo"><%=image_tag "refuGapp.png", width: '300px'  %></div> <br>
       <div class="home-tagline">Fill the gap between locals and refugees.</div>
-      <div class="home-logo">
+      <div class="home-button">
         <% if current_user  %>
-        <%= ""  %>
+        <%= link_to "What's new?", posts_path, class:"hvr-sweep-to-right btn-orange"%>
         <% else  %>
         <%= link_to "CONNECT", new_user_session_path, class:"hvr-sweep-to-right btn-orange"%>
         <% end %>
       </div>
     </div>
-    <div class="home-about-top">
-      <div class="home-underline"><span class="home-title">About</span></div>
-    </div>
+    <div class="home-underline"><span class="home-title">About</span></div>
     <div class="home-about">
       <p> We all are blessed with a lot of skills. Why not connect with the people around us by exchanging them? With RefuGapp we are filling the gap between locals and newcomers by providing a platform where you can offer your offer and find skill and connect with new people! </p>
       <p>Are you a Local? Get to now the newcomers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect! Or: a skill you want to share? Make a post and someone will find you!</p>
@@ -22,18 +20,10 @@
 
       </div>
 
-
-      <div class="diagonal-blue">
-
-        <%#= image_tag "skew.svg", width: "100%"  %></div>
-
-
-
-        <div class="center-div">
-
-
-
-        </div>
-
+      <div class="home-about-top">
+      </div>
+      <div class="bottom">
+        
+      </div>
 
 
