--- a/app/assets/stylesheets/pages/_shared_stories.scss
+++ b/app/assets/stylesheets/pages/_shared_stories.scss
@@ -48,3 +48,23 @@
   position: absolute;
   bottom: 30px;
 }
+
+.stories-whole-story {
+  text-align: left;
+  padding: 30px 60px;
+}
+
+.stories-pictures {
+  padding: 0px 60px;
+  padding-top: 60px;
+}
+
+.stories-links-one {
+  margin-left: 60px;
+}
+
+.stories-links-two {
+  margin-left: 50px;
+}
+
+
