--- a/app/views/shared_stories/show.html.erb
+++ b/app/views/shared_stories/show.html.erb
@@ -1,19 +1,46 @@
-<div class="wrapper">
-<div class="shared_story">
+<div class="wrapper-stories">
+  <div class="stories-card">
+   <div class="stories-underline-blue">
+    <span class="stories-title"><%= @story.title %></span>
+  </div>
+  <p class="stories-whole-story"><%= @story.story %> </p>
+  <p class="stories-pictures">
     <%= cl_image_tag @story.author.full_picture, class: "avatar" %>
-       <%= link_to @story.author.title, user_path(@story.author) %>
+    <%= link_to @story.author.title, user_path(@story.author) %>
     <%= cl_image_tag @story.member.full_picture, class: "avatar"%>
 
-      <%= link_to @story.member.title, user_path(@story.member) %> <br>
+    <%= link_to @story.member.title, user_path(@story.member) %> <br>
+  </p>
+</div>
+  <br>
+<div class="stories-links-one">
+ <%= link_to "Write a story", new_shared_story_path, class: "hvr-sweep-to-right btn-black"  %>
+</div>
+  <br>
+<div class="stories-links-two">
+  <%= link_to "Back to all stories", shared_stories_path, class: "hvr-underline-from-center btn-simple-blue" %>
+</div>
 
-      <%= @story.title %> <br>
-      <%= @story.story %> <br>
+</div>
 
-  </div>
 
-<%= link_to "Back to all stories", shared_stories_path %> <br>
 
-<% if current_user %>
-  <%= link_to "Write a story", new_shared_story_path  %>
-<% end %>
+
+
+
+
+<div class="wrapper">
+  <div class="shared_story">
+
+
+   <br>
+   <%= @story.story %> <br>
+
+ </div>
+
+
+
+ <% if current_user %>
+
+ <% end %>
 </div>
