fix empty profile

--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -50,6 +50,7 @@
   background-color: white;
   margin: 20px auto;
   width: 400px;
+  min-height: 200px;
 }
 
 .profile-city {
@@ -92,4 +93,9 @@
 
 .btn-delete:hover {
   color: red;
+}
+
+.profile-please {
+  color: $dark-gray;
+  text-align: left;
 }
