--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,7 +11,15 @@
     <div class="col-md-8 col-xs-12">
       <div class="profile-content">
       <h3 class="profile-underline"><span class="profile-title"><%= @user.title  %></span></h3>
-      <div class="profile-description"> <%= @user.description %> </div>
+      <div class="profile-description">
+        <% if @user.description.length > 0 %>
+            <%= @user.description %>
+          <% else %>
+            <br>
+            <div class="profile-please">You didn't fill in your description yet, <br>
+            please edit your profile to keep up to date..</div>
+        <% end %>
+      </div>
       <user class="profile-city">I'm from <%= @user.city %></user> <br>
       <% if @user == current_user %>
       <%= link_to "EDIT", edit_profile_path, class: "hvr-underline-from-center btn-border-black ruimte"  %>
