--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,9 @@
   <div class="form-title"><h1>Posts</h1></div>
   <!-- FILTER THE RESULTS -->
   <span>
+    <span class="btn-black active" data-target="#list-part">LIST</span>
+    <span class="btn-black" data-target="#map">MAP</span>
+
 
     <div class="posts-selection">
       <div class="posts-type-selection person-type">
@@ -23,7 +26,7 @@
       </div>
     </div>
   </span>
-  <div class="container">
+  <div class="container" id="list-part">
     <div class="row">
       <% @posts.reverse.each do |post| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
@@ -45,7 +48,7 @@
           </div>
           <div class="post-make">
             <% if post.button_valid?(current_user) %>
-            <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-simple-black" %></p>
+            <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
             <% end %>
           </div>
         </div>
@@ -54,10 +57,10 @@
     </div>
     <% if current_user %>
     <div class="posts-center">
-      <%= link_to 'Make a post!', new_post_path, class:"hvr-sweep-to-right btn-black" %>
+      <%= link_to 'Make a post!', new_post_path, class:"hvr-sweep-to-right btn-black  make-post" %>
     </div>
+    <% end %>
   </div>
-  <% end %>
 </div>
 
 
