--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,7 +26,7 @@
 .home-logo {
   padding-top: 50px;
   img {
-    max-width: 480px;
+    width: 40%;
   }
 }
 
@@ -54,9 +54,10 @@
 .home-about {
   text-align: center;
   font-family: $base-font;
-  padding: 0 200px;
+  margin: 0 auto;
   color: $dark-gray;
   padding-bottom: 100px;
+  width: 80%;
 }
 
 .home-title {
@@ -70,7 +71,7 @@
   text-decoration: underline;
   text-align: center;
   font-family: $base-font;
-  padding: 20px 0;
+  padding: 100px 0;
   font-size: 32px;
 }
 
@@ -81,5 +82,13 @@
 .bottom {
   background-color: $dark-gray;
   height: 200px;
+}
+
+@media screen and (max-width: 585px) {
+  .home-logo{
+    img {
+      width: 70%;
+    }
+  }
 }
 
