--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -71,7 +71,7 @@
   text-decoration: underline;
   text-align: center;
   font-family: $base-font;
-  padding: 100px 0;
+  padding: 100px 0 30px;
   font-size: 32px;
 }
 
@@ -82,6 +82,11 @@
 .bottom {
   background-color: $dark-gray;
   height: 200px;
+}
+
+.homepage-posts {
+  width: 400px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 585px) {
