--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,7 +45,7 @@
   background-repeat: no-repeat;
   background-position: left-top;
   background-size: 100% 100%;
-  height: 217px;
+  height: 214px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -85,12 +85,13 @@
 }
 
 .homepage-posts {
-  width: 400px;
+  width: 100%;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 585px) {
   .home-logo{
+    padding-top: 2px;
     img {
       width: 70%;
     }
