some small changes

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,11 +2,11 @@
   <div class="form">
     <h3 class="form-title">New Post</h3>
     <%=  simple_form_for [@post] do |f| %>
-    <%= f.input :subject, placeholder: "subject", label: false %>
+    <%= f.input :subject, placeholder: "Subject", label: false %>
     <%= f.input :content, placeholder: "Write your post here", label: false%>
     <%= f.input :city, input_html: {value: current_user.city || ""}, label: false %>
-    <%= f.input :postal_code, placeholder: "postalcode (1234AZ)", label: false %>
-    <%= f.input :category, placeholder: "choose a category", label:false %>
+    <%= f.input :postal_code, placeholder: "Postalcode (1234AZ)", label: false %>
+    <%= f.input :category, placeholder: "Choose a category", label:false %>
 
     <%= f.submit class: "form-button"  %>
 
